--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:gravity="center"
+    android:background="#FFFFFF"
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="150dp"
-        android:src="@drawable/layni"
-        android:layout_height="150dp" />
+        android:layout_width="match_parent"
+        android:src="@drawable/fondo"
+        android:scaleType="centerCrop"
+        android:layout_height="match_parent" />
 
-</LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/mask_color"
+        android:layout_height="match_parent"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="52dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/layni_logo" />
+
+</RelativeLayout>
