--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,28 @@
     <color name="colorPrimary">#C89131</color>
     <color name="colorPrimaryDark">#a77723</color>
     <color name="colorAccent">#5B5B5F</color>
+    <color name="colorAccentLight">#7a7a7e</color>
+    <color name="blanco">#FFFFFF</color>
+    <color name="blanco_humo">#f7f6f6</color>
+    <color name="rojo_ipd">#B04127</color>
+    <color name="rojo_claro">#cf5336</color>
+    <color name="rojo_oscuro">#a7341a</color>
+    <color name="gris">#6D6F71</color>
+    <color name="gris_oscuro">#424446</color>
+    <color name="gris_claro">#9b9d9f</color>
+    <color name="verde">#95C11E</color>
+    <color name="primaryText">#424242</color>
+    <color name="primaryTextLight">#757575</color>
+
+    <color name="dot_active">@color/colorAccent</color>
+    <color name="dot_inactive">@color/blanco</color>
+
+    <color name="nivel4">#e98BC34A</color>
+    <color name="nivel3">#e9CDDC39</color>
+    <color name="nivel2">#e9FFEB3B</color>
+    <color name="nivel1">#e9FF9800</color>
+    <color name="nivel0">#e9d1cece</color>
+    <color name="neutro">#e9e0f7fa</color>
+
+    <color name="mask_color">#c51c1c1d</color>
 </resources>
