--- a/app/src/main/res/layout/activity_reservas.xml
+++ b/app/src/main/res/layout/activity_reservas.xml
@@ -31,165 +31,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_tutor2"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvReservas"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:cardCornerRadius="7dp"
-        app:cardElevation="3dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/tutor2" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/mask_color" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/tvTutor"
-                    android:layout_alignParentStart="true"
-                    android:gravity="bottom"
-                    android:paddingStart="4dp"
-                    android:text="Tutor"
-                    android:theme="@style/TextViewSmallLight" />
-
-                <TextView
-                    android:id="@+id/tvTutor"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:gravity="bottom"
-                    android:paddingStart="4dp"
-                    android:paddingBottom="4dp"
-                    android:text="Gerardo Sanchez"
-                    android:theme="@style/TextViewNormalLight" />
-            </RelativeLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingStart="8dp">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Nivel"
-                            android:theme="@style/TextViewSmallDark" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Primaria"
-                            android:textStyle="bold"
-                            android:theme="@style/TextViewNormalDark" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Lugar"
-                            android:theme="@style/TextViewSmallDark" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Domicilio"
-                            android:textStyle="bold"
-                            android:theme="@style/TextViewNormalDark" />
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Horario"
-                        android:theme="@style/TextViewSmallDark" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="3 pm - 4 pm"
-                        android:textStyle="bold"
-                        android:theme="@style/TextViewNormalDark" />
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Cursos"
-                        android:theme="@style/TextViewSmallDark" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Matematica, Letras"
-                        android:textStyle="bold"
-                        android:theme="@style/TextViewNormalDark" />
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
