--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="text_normal">14sp</dimen>
     <dimen name="text_sub_title">16sp</dimen>
     <dimen name="text_title">24sp</dimen>
+    <dimen name="text_extra">40dp</dimen>
 
     <dimen name="dots_height">30dp</dimen>
     <dimen name="dots_bottom_margin">20dp</dimen>
