--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:id="@+id/ly_container"
     android:layout_height="match_parent"
-    tools:context=".PerfilActivity">
+    tools:context=".ui.perfil.PerfilActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
