--- a/app/src/main/res/layout/activity_reserva.xml
+++ b/app/src/main/res/layout/activity_reserva.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#FFFFFF"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#FFFFFF"
+    tools:context=".ui.reserva.ReservaActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -32,65 +32,28 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+    <com.badoualy.stepperindicator.StepperIndicator
+        android:id="@+id/indicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"/>
 
-        <TextView
-            android:id="@+id/step1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/circle_active"
-            android:gravity="center"
-            android:text="1"
-            android:theme="@style/TextViewSubTitleDark" />
-
-        <TextView
-            android:id="@+id/step2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginStart="32dp"
-            android:background="@drawable/circle_neutro"
-            android:gravity="center"
-            android:text="2"
-            android:theme="@style/TextViewSubTitleDark" />
-
-        <TextView
-            android:id="@+id/step3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/circle_neutro"
-            android:gravity="center"
-            android:text="3"
-            android:theme="@style/TextViewSubTitleDark" />
-
-        <TextView
-            android:id="@+id/step4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/circle_neutro"
-            android:gravity="center"
-            android:text="4"
-            android:theme="@style/TextViewSubTitleDark" />
-
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/flContainer"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal">
 
 
